# pybif6

./: README.md  pyproject.toml
src/pybif6/: __init__.py  parser.py
tests/: __init__.py
