[project]
name = "pybif6"
version = "0.1.0"
description = "ToF-SIMS BIF6 file parsing library"
authors = [
    {name = "Shenghui Ye", email = "yesh@aliyun.com"},
]
dependencies = ["numpy>=2.0.2"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "GPL-3"}


[project.urls]
Homepage = "https://github.com/yesh0/pybif6"
Issues = "https://github.com/yesh0/pybif6/issues"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
